[tool.poetry]
name = "advent-of-code-2021"
version = "1.0.0"
description = "Python solutions to Advent of Code 2021"
authors = ["Grant Williams <grant@grantwilliams.dev>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
advent-of-code-data = "^1.1.1"
numpy = "^1.21.4"
networkx = "^2.6.3"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
